--- a/app/views/conceptospersonales/_form.html.erb
+++ b/app/views/conceptospersonales/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@conceptopersonal, html: {  role: "form"})   do |f| %>
-<%= render 'layouts/errores', :x=>@conceptopersonal %>
+<%= render 'layouts/errores', x: @conceptopersonal %>
 <div class="panel panel-default">
   <div class="panel-heading">
     Datos
@@ -23,7 +23,7 @@
             <span class="fa fa-arrow-up"></span>
             <span class="fa fa-arrow-down"></span>
           </span>
-          <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"],f.object.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},:class =>"form-control")  %>
+          <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"],f.object.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},class: "form-control")  %>
         </div>
 
       </div>
