--- a/app/views/dependencias/_form.html.erb
+++ b/app/views/dependencias/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@dependencia, html: {  role: "form"})   do |f| %>
-<%= render 'layouts/errores', :x=>@dependencia %>
+<%= render 'layouts/errores', x: @dependencia %>
 <div class="panel panel-default">
   <div class="panel-heading">
     Datos
