--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -5,9 +5,9 @@
           <span class="input-group-addon">
               <span class="fa fa-list"></span>
           </span>
-<%= f.text_area :value,:class => "form-control", rows: 1 %>
+<%= f.text_area :value,class: "form-control", rows: 1 %>
       </div>
   </div>
 
-<%=render 'layouts/botones', :p => settings_path %>
+<%=render 'layouts/botones', p: settings_path %>
 <% end %>
