--- a/app/views/tipos/_form.html.erb
+++ b/app/views/tipos/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@tipo, html: {  role: "form"})   do |f| %>
-<%= render 'layouts/errores', :x=>@tipo %>
+<%= render 'layouts/errores', x: @tipo %>
 <div class="panel panel-default">
   <div class="panel-heading">
     Datos
