--- a/app/views/cargos/index.js.erb
+++ b/app/views/cargos/index.js.erb
@@ -1,3 +1,3 @@
-$('.sort_paginate_ajax').html("<%= escape_javascript(render "cargo", :p => @cargos)%>");
+$('.sort_paginate_ajax').html("<%= escape_javascript(render "cargo", p: @cargos)%>");
 $(classes).click(function(){$.getScript(this.href); return false;} );
 $("#search_icon").attr("class","fa fa-search")
