--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -27,7 +27,7 @@
           <td><%= $dic["modalidad_de_pago"].key(concepto.modalidad_de_pago )%></td>
 
           <td>
-            <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
+            <%= render 'layouts/actions', x: Concepto, y: edit_concepto_path(concepto), z: concepto %>
 
         </td>
         </tr>
