--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= render 'layouts/nuevo', :msg => "Nuevo Departamento", :path=>new_departamento_path ,:x =>Departamento %>
+  <%= render 'layouts/nuevo', msg: "Nuevo Departamento", path: new_departamento_path ,x: Departamento %>
 
   <h1>Departamentos</h1>
 </div>
@@ -26,7 +26,7 @@
             <td><%= departamento.dependencia.nombre %></td>
             <td><%=Cargo.where("departamento_id=#{departamento.id} and disponible=false").length %></td>
             <td>
-              <%= render 'layouts/actions', :x => Departamento, :y => edit_departamento_path(departamento), :z =>departamento %>
+              <%= render 'layouts/actions', x: Departamento, y: edit_departamento_path(departamento), z: departamento %>
 
             </td>
           </tr>
