--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= render 'layouts/nuevo', :msg => "Nueva dependencia", :path=>new_dependencia_path ,:x =>Dependencia %>
+  <%= render 'layouts/nuevo', msg: "Nueva dependencia", path: new_dependencia_path ,x: Dependencia %>
 
   <h1>Dependencias</h1>
 </div>
@@ -24,7 +24,7 @@
           <tr>
             <td><%= dependencia.nombre %></td>
             <td class="actions">
-              <%= render 'layouts/actions', :x => Dependencia, :y => edit_dependencia_path(dependencia), :z =>dependencia %>
+              <%= render 'layouts/actions', x: Dependencia, y: edit_dependencia_path(dependencia), z: dependencia %>
             </td>
           </tr>
           <% end %>
