--- a/app/views/personas/_familiar_fields.html.erb
+++ b/app/views/personas/_familiar_fields.html.erb
@@ -10,7 +10,7 @@
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
         </span>
-        <%= f.text_field :cedula,:class => "form-control",maxlength: "8", autofocus:"" %>
+        <%= f.text_field :cedula,class: "form-control",maxlength: "8", autofocus:"" %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -19,7 +19,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-        <%= f.text_field :nombres,:class => "form-control"  %>
+        <%= f.text_field :nombres,class: "form-control"  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -28,7 +28,7 @@
         <span class="input-group-addon">
           <span class="fa fa-align-justify"></span>
         </span>
-        <%= f.text_field :apellidos,:class => "form-control"  %>
+        <%= f.text_field :apellidos,class: "form-control"  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -37,7 +37,7 @@
         <span class="input-group-addon">
           <span class="fa fa-calendar"></span>
         </span>
-        <%= f.date_field :fecha_de_nacimiento,:class => "form-control"  %>
+        <%= f.date_field :fecha_de_nacimiento,class: "form-control"  %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -46,7 +46,7 @@
         <span class="input-group-addon">
           <span class="fa fa-venus-mars"></span>
         </span>
-        <%= f.select(:sexo, options_for_select($dic["sexos"],f.object.sexo ),{include_blank: 'Seleccione un sexo...'},:class =>"form-control"  ) %>
+        <%= f.select(:sexo, options_for_select($dic["sexos"],f.object.sexo ),{include_blank: 'Seleccione un sexo...'},class: "form-control"  ) %>
       </div>
     </div>
     <div class="col-sm-4">
@@ -55,7 +55,7 @@
         <span class="input-group-addon">
           <span class="fa fa-home"></span>
         </span>
-        <%= f.text_area :direccion,:class => "form-control"  %>
+        <%= f.text_area :direccion,class: "form-control"  %>
       </div>
     </div>
 
