--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= render 'layouts/nuevo', :msg => "Contratar persona", :path=>new_persona_path ,:x =>Persona %>
+  <%= render 'layouts/nuevo', msg: "Contratar persona", path: new_persona_path ,x: Persona %>
 
   <h1>Empleados</h1>
 </div>
@@ -80,19 +80,19 @@
 
                   <div class="tab-pane fade active in" id="activos">
                     <div class="sort_paginate_ajax  text-center">
-                      <%= render 'personas', :p => @personas %>
+                      <%= render 'personas', p: @personas %>
                     </div>
                   </div>
 
                   <div class="tab-pane fade" id="suspendidos">
                     <div class="sort_paginate_ajax_suspendidos  text-center">
-                      <%= render 'personas', :p => @personas_suspendidas %>
+                      <%= render 'personas', p: @personas_suspendidas %>
                     </div>
                   </div>
 
                   <div class="tab-pane fade" id="retirados">
                     <div class="sort_paginate_ajax_retirados  text-center">
-                      <%= render 'personas', :p => @personas_retiradas %>
+                      <%= render 'personas', p: @personas_retiradas %>
                     </div>
                   </div>
 
