--- a/app/views/registros/index.html.erb
+++ b/app/views/registros/index.html.erb
@@ -21,7 +21,7 @@
         <div class="table-responsive">
           <div class="tab-pane fade active in" id="activos">
             <div class="sort_paginate_ajax  text-center">
-              <%= render 'registros', :p => @registros %>
+              <%= render 'registros', p: @registros %>
             </div>
           </div>
         </li>
