--- a/app/views/registros/index.js.erb
+++ b/app/views/registros/index.js.erb
@@ -1,4 +1,4 @@
-$('.sort_paginate_ajax').html("<%= escape_javascript(render "registros", :p => @registros)%>");
+$('.sort_paginate_ajax').html("<%= escape_javascript(render "registros", p: @registros)%>");
 $(".sort_paginate_ajax th a, .sort_paginate_ajax .pagination a").click(function () {
   $.getScript(this.href);
   return false;
