--- a/app/views/conceptos/_form.html.erb
+++ b/app/views/conceptos/_form.html.erb
@@ -28,7 +28,7 @@
     <span class="input-group-addon">
       <span class="fa fa-calendar-o"></span>
     </span>
-    <%= f.select(:modalidad_de_pago , options_for_select($dic["modos_de_pago"],@concepto.modalidad_de_pago),{include_blank:'Seleccione una Modalidad de Pago...'},:class =>"form-control", REQUIRED: "")  %>
+    <%= f.select(:modalidad_de_pago , options_for_select($dic["modos_de_pago"], f.object.modalidad_de_pago),{include_blank:'Seleccione una Modalidad de Pago...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
 </div>
 <div class="col-xs-6">
@@ -38,7 +38,7 @@
       <span class="fa fa-arrow-up"></span>
       <span class="fa fa-arrow-down"></span>
     </span>
-    <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"],@concepto.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},:class =>"form-control", REQUIRED: "")  %>
+    <%= f.select(:tipo_de_concepto , options_for_select($dic["tipos_de_conceptos"], f.object.tipo_de_concepto),{include_blank:'Seleccione Tipo de Concepto...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
 
 </div>
