--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -6,13 +6,23 @@
   <div class="col-sm-2 pull-right">
     <div class="btn-group">
       <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-      Opciones
-      <span class="caret"></span>
+        Opciones
+        <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
         <li><%= link_to 'Editar', edit_persona_path(@persona)%></li>
-        <li><%= link_to 'Jubilarse', jubilarse_persona_path(@persona),class: "fa fa-trash", method: :post, data: { confirm: 'Esta seguro?' } %></li>
         <li><%= link_to 'Regresar', personas_path%></li>
+        <% case @persona.status
+          when 'activo'
+        %>
+        <li><%= link_to 'Suspender', cambiarestado_persona_path(@persona, :estado =>3), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <li><%= link_to 'Retirar',  cambiarestado_persona_path(@persona, :estado =>0), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <% when 'retirado'%>
+
+        <li><%= link_to 'Reingresar',  cambiarestado_persona_path(@persona, :estado =>2), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <% when 'suspendido'%>
+        <li><%= link_to 'Reactivar',  cambiarestado_persona_path(@persona, :estado =>1), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <%end%>
       </ul>
     </div>
   </div>
@@ -26,137 +36,132 @@
     <span class="pull-left">
       <strong class="">status</strong>
     </span>
-  <%= @persona.status %></li>
+    <%= @persona.status.capitalize %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Departamento</strong>
     </span>
-  <%= @persona.cargo.departamento.nombre %></li>
+    <%= @persona.cargo.departamento.nombre.capitalize %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Cargo</strong>
     </span>
-  <%= @persona.cargo.nombre%></li>
+    <%= @persona.cargo.nombre.capitalize%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Sueldo base</strong>
     </span>
-  <%= @persona.cargo.sueldos.last.monto%></li>
+    <%= @persona.cargo.sueldos.last.monto%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Cedula</strong>
     </span>
-  <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Nombres</strong>
-    </span>
-  <%= @persona.nombres %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Apellidos</strong>
-    </span>
-  <%= @persona.apellidos %></li>
+    <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Telefonos</strong>
     </span><%= @persona.telefono_fijo %><br>
-  <%= @persona.telefono_movil %></li></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Correo</strong>
-    </span>
+    <%= @persona.telefono_movil %></li>
+</li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Correo</strong>
+  </span>
   <%= @persona.correo %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Cuenta</strong>
-    </span>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Cuenta</strong>
+  </span>
   <%= @persona.cuenta %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Fecha de nacimiento</strong>
-    </span>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Fecha de nacimiento</strong>
+  </span>
   <%= @persona.fecha_de_nacimiento %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Direccion</strong>
-    </span><%= @persona.direccion %></li>
-    <li class="list-group-item text-right">
-      <span class="pull-left">
-        <strong class="">Sexo</strong>
-      </span><%= $dic["sexos"].key(@persona.sexo) %></li>
-      <li class="list-group-item text-muted" contenteditable="false">Contrato</li>
-      <li class="list-group-item text-right">
-        <span class="pull-left">
-          <strong class="">Tipo</strong>
-        </span>
-      <%= $dic["tipos_de_contrato"].key(@persona.contrato.tipo_de_contrato)%></li>
-      <li class="list-group-item text-right">
-        <span class="pull-left">
-          <strong class="">Fecha de Inicio</strong>
-        </span>
-      <%= @persona.contrato.fecha_inicio%></li>
-      <li class="list-group-item text-right">
-        <span class="pull-left">
-          <strong class="">Años de servicio</strong>
-        </span>
-      <%= distance_of_time_in_words_hash(@persona.contrato.fecha_inicio,Time.now)[:years]%></li>
-      <% if @persona.contrato.tipo_de_contrato == 1%>
-      <li class="list-group-item text-right">
-        <span class="pull-left">
-          <strong class="">Fecha de fin</strong>
-        </span>
-      <%= @persona.contrato.fecha_fin%></li>
-      <%elsif @persona.contrato.tipo_de_contrato == 2%>
-      <li class="list-group-item text-right">
-        <span class="pull-left">
-          <strong class="">Sueldo Externo</strong>
-        </span>
-      <%= @persona.contrato.sueldo_externo%></li>
-      <%end%>
-    </ul>
-  </div>
-  <div class="col-sm-8">
-    <div class="col-sm-12">
-      <table class="table table-hover table-condensed">
-        <thead>
-          <tr>
-            <th>CONCEPTO</th>
-            <th>ASIGNACION</th>
-            <th>DEDUCCION</th>
-            <th>TOTAL</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @persona.asignaciones.each do |c| %>
-          <tr>
-            <td><%= c['nombre']%></td>
-            <td><%=c['valor']%></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <% end %>
-          
-         <% @valor=0
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Direccion</strong>
+  </span><%= @persona.direccion.capitalize %></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Sexo</strong>
+  </span><%= $dic["sexos"].key(@persona.sexo) %></li>
+<li class="list-group-item text-muted" contenteditable="false">Contrato</li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Tipo</strong>
+  </span>
+  <%= $dic["tipos_de_contrato"].key(@persona.contrato.tipo_de_contrato)%></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Fecha de Inicio</strong>
+  </span>
+  <%= @persona.contrato.fecha_inicio%></li>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Años de servicio</strong>
+  </span>
+  <%= distance_of_time_in_words_hash(@persona.contrato.fecha_inicio,Time.now)[:years]%></li>
+<% if @persona.contrato.tipo_de_contrato == 1%>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Fecha de fin</strong>
+  </span>
+  <%= @persona.contrato.fecha_fin%></li>
+<%elsif @persona.contrato.tipo_de_contrato == 2%>
+<li class="list-group-item text-right">
+  <span class="pull-left">
+    <strong class="">Sueldo Externo</strong>
+  </span>
+  <%= @persona.contrato.sueldo_externo%></li>
+<%end%>
+</ul>
+</div>
+
+<div class="col-sm-8">
+  <ul class="list-group">
+    <li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modos_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
+    <li class="list-group-item">
+<table class="table table-hover table-condensed">
+  <thead>
+    <tr>
+      <th>CONCEPTO</th>
+      <th>ASIGNACION</th>
+      <th>DEDUCCION</th>
+      <th>TOTAL</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @persona.asignaciones.each do |c| %>
+    <tr>
+      <td><%= c['nombre'].upcase%></td>
+      <td><%=c['valor']%></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <% end %>
+
+    <% @valor=0
           @persona.deducciones.each do |c| %>
-          <tr>
-            <td><%= c['nombre']%></td>
-            <td></td>
-            <td><%=c['valor']%></td>
-            <td></td>
-          </tr>
-          <% end %>
-          
-          <tr>
-            <th></th>
-            <th><%=
+    <tr>
+      <td><%= c['nombre'].upcase%></td>
+      <td></td>
+      <td><%=c['valor']%></td>
+      <td></td>
+    </tr>
+    <% end %>
+
+    <tr>
+      <th></th>
+      <th><%=
             (@persona.total_asignaciones - 0.0005).round(2)%></th>
-            <th><%=
+      <th><%=
               (@persona.total_deducciones - 0.0005).round(2)
             %></th>
-            <th><%= ((@persona.total) - 0.0005).round(2).to_s+"  BsF." %></th>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+      <th><%= ((@persona.total) - 0.0005).round(2).to_s+"  BsF." %></th>
+    </tr>
+  </tbody>
+</table>
+</li>
+</ul>
+</div>
